--- a/views/login.hbs
+++ b/views/login.hbs
@@ -64,7 +64,7 @@
             <a href="/auth/google" class="btn btn-danger"><span
                 class="fa fa-google"
               ></span>
-              SignIn with Google</a>
+              SignIn with Google (please press this)</a>
           </div>
           <div class="form-group">
         <p>Dont have any account? <a href="/register">Register now!</a></p>
